--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -5,4 +5,8 @@
   align-items: center;
   margin-left: 10%;
   margin-right: 10%;
+  background-image: url(/src/background-crumpled-paper-sheet_1194-7545.jpg);
+  color: black;
+  font-size: 1.2rem;
+  padding: 10px;
 }
