--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-image: url(istockphoto-1145602814-612x612.jpg);
+  background-repeat: repeat;
+  background-size: cover;
   color: white;
 }
 
