more css changes

--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -6,7 +6,25 @@
   margin-left: 10%;
   margin-right: 10%;
   background-image: url(/src/background-crumpled-paper-sheet_1194-7545.jpg);
+  background-size: cover;
   color: black;
   font-size: 1.2rem;
+  padding: 20px;
+  font-weight: bold;
+  font-family: "Architects Daughter", cursive;
+}
+
+button {
   padding: 10px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  width: fit-content;
+  height: max-content;
+  margin-bottom: 10px;
+}
+
+button:hover {
+  opacity: 0.8;
 }
