--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -10,7 +10,7 @@
   font-size: 1.2rem;
   padding: 20px;
   font-weight: bold;
-  font-family: "Architects Daughter", cursive;
+  font-family: "Hachi Maru Pop", cursive;
   width: 80%;
   height: fit-content;
 }
@@ -24,6 +24,9 @@ button {
   width: fit-content;
   height: max-content;
   margin-bottom: 10px;
+  background-image: url(/src/wood_pattern.png);
+  color: rgb(169, 92, 25);
+  box-shadow: 0px 0px 5px rgb(169, 92, 25);
 }
 
 button:hover {
@@ -32,4 +35,11 @@ button:hover {
 
 .rules-button {
   justify-content: left;
+}
+
+.language-button {
+  background-color: whitesmoke;
+  background-image: none;
+  color: black;
+  font-family: "Hachi Maru Pop", cursive;
 }
