--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -24,6 +24,7 @@ button {
   width: fit-content;
   height: max-content;
   margin-bottom: 10px;
+  margin-top: 10px;
   background-image: url(/src/wood_pattern.png);
   color: rgb(169, 92, 25);
   box-shadow: 0px 0px 5px rgb(169, 92, 25);
