CSS changes including changes to app css for sizing and text changes based on viewport

--- a/src/Components/Word.css
+++ b/src/Components/Word.css
@@ -9,7 +9,7 @@
 }
 
 .word-card {
-  background-image: url(../background-crumpled-paper-sheet_1194-7545.jpg);
+  background-image: url(../images/background-crumpled-paper-sheet_1194-7545.jpg);
   color: rgb(43, 41, 41);
   border-radius: 5%;
   padding: 10px;
@@ -17,11 +17,14 @@
   margin-bottom: 10px;
   font-style: italic;
   font-weight: bolder;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 
 @media screen and (max-width: 600px) {
   .word-div {
     width: 100%;
+  }
+  .word-card {
+    font-size: 1rem;
   }
 }
