--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 .App {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  width: 100%;
   text-align: center;
   font-family: "Hachi Maru Pop", cursive;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 
 @media screen and (max-width: 768px) {
   .App {
-    height: 90vh;
+    height: 100%;
   }
 }
