--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  background-image: url(/src/background-crumpled-paper-sheet_1194-7545.jpg);
+  background-image: url(/src/images/background-crumpled-paper-sheet_1194-7545.jpg);
   background-size: cover;
   color: black;
   font-size: 1.2rem;
@@ -29,7 +29,7 @@ button {
   height: max-content;
   margin-bottom: 10px;
   margin-top: 10px;
-  background-image: url(/src/wood_pattern.png);
+  background-image: url(/src/images/wood_pattern.png);
   color: rgb(169, 92, 25);
   box-shadow: 0px 0px 5px rgb(169, 92, 25);
 }
@@ -48,4 +48,10 @@ button:hover {
   color: black;
   font-family: "Hachi Maru Pop", cursive;
   box-shadow: 0px 0px 1px rgb(169, 92, 25);
+}
+
+@media screen and (max-width: 768px) {
+  .rules-button {
+    margin-bottom: 10%;
+  }
 }
