--- a/src/Components/Title.css
+++ b/src/Components/Title.css
@@ -10,9 +10,9 @@
 
 .title {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: bold;
-  color: #fff;
+  color: rgb(223, 198, 198);
   text-align: center;
   margin-left: 10px;
   margin-right: 10px;
