--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(istockphoto-1145602814-612x612.jpg);
+  background-image: url(/src/images/istockphoto-1145602814-612x612.jpg);
   background-repeat: repeat;
   background-size: cover;
   color: white;
+  width: 100vw;
+  height: 100vh;
 }
 
 code {
