remove margin change for small viewports

--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -52,6 +52,6 @@ button:hover {
 
 @media screen and (max-width: 768px) {
   .rules-button {
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
   }
 }
