--- a/src/Components/Rules.css
+++ b/src/Components/Rules.css
@@ -23,6 +23,7 @@ button {
   padding: 5px;
   text-align: center;
   font-size: 16px;
+  font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
   width: fit-content;
